--- a/translations/messages.gl_ES.po
+++ b/translations/messages.gl_ES.po
@@ -17771,7 +17771,7 @@ msgstr "Este usuario non ten unha URL relacionada"
 msgid "Extra data"
 msgstr "Información extra"
 
-msgid "Exercises in learning paths"
+msgid "Tests in learning paths"
 msgstr "Exercicios en Leccións"
 
 msgid "Id"
@@ -23734,10 +23734,10 @@ msgstr ""
 msgid "Absent"
 msgstr ""
 
-msgid "Internal database error"
+msgid "Internal database error: %s"
 msgstr ""
 
-msgid "Wrong number of days"
+msgid "Wrong number of days: %s: %s"
 msgstr ""
 
 msgid "Subscription not allowed"
