--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -17772,7 +17772,7 @@ msgstr "Acest utilizator nu are o adresă URL relationata."
 msgid "Extra data"
 msgstr "Informații suplimentare"
 
-msgid "Exercises in learning paths"
+msgid "Tests in learning paths"
 msgstr "Exerciții in lecții"
 
 msgid "Id"
@@ -23735,10 +23735,10 @@ msgstr ""
 msgid "Absent"
 msgstr ""
 
-msgid "Internal database error"
+msgid "Internal database error: %s"
 msgstr ""
 
-msgid "Wrong number of days"
+msgid "Wrong number of days: %s: %s"
 msgstr ""
 
 msgid "Subscription not allowed"
